# fullstack-harjoitusprojekti

./: README.md  docker-compose.dev.yml  docker-compose.yml
.github/workflows/: pipeline.yaml
backend/: .dockerignore  .gitignore  .rustfmt.toml  Cargo.toml  Dockerfile  README.md  dev.Dockerfile  fly.toml
backend/migrations/: 2024071900_users.down.sql  2024071900_users.up.sql  2024072000_sessions.up.sql  2024072400_portfolios.down.sql  2024072400_portfolios.up.sql  2024080500_works_and_categories.down.sql  2024080500_works_and_categories.up.sql  2024081000_work_rights.down.sql  2024081000_work_rights.up.sql  2024081100_filenames.down.sql  2024081100_filenames.up.sql  2024082500_retype_attachment_kind.down.sql  2024082500_retype_attachment_kind.up.sql  2024082501_big_attachment_file_support.down.sql  2024082501_big_attachment_file_support.up.sql  2024082800_big_file_attachments.down.sql  2024082800_big_file_attachments.up.sql  2024090100_orderings.down.sql  2024090100_orderings.up.sql
backend/src/: api_errors.rs  array_string_types.rs  config.rs  main.rs  request_state.rs  util.rs
backend/src/data/: mod.rs  portfolio.rs  portfolios.rs  user.rs  work.rs
backend/src/routes/: mod.rs  portfolio.rs  user.rs  work.rs
backend/src/routes/work/: file.rs
backend/src/services/: mod.rs  portfolio.rs  user.rs  work.rs
backend/src/services/work/: big_files.rs  subtables.rs
frontend/: .eslintrc.cjs  Dockerfile  README.md  dev.Dockerfile  fly.toml  index.html  nginx.conf  package-lock.json  package.json
frontend/public/locales/en/: translation.json
frontend/public/locales/fi/: translation.json
frontend/src/: App.tsx  i18n.ts  main.tsx  vite-env.d.ts
frontend/src/components/: BackendStatus.tsx  LoggedOutIndex.tsx  LoginRegisterForm.tsx  MainDashboard.tsx
frontend/src/components/Forms/: ValidatedCheckbox.tsx  ValidatedTextInput.tsx  index.ts
frontend/src/components/Portfolio/: Card.tsx  CategoryEdit.tsx  Edit.tsx  Listing.tsx  Page.tsx  StaticPage.css  StaticPage.tsx  index.ts
frontend/src/components/ReorderableList/: ReorderableElement.css  ReorderableElement.tsx  index.tsx
frontend/src/components/Work/: Card.tsx  (+3 more)
frontend/src/hooks/: useApiFetch.ts  useLogin.ts  useSession.ts  useTimeout.ts
frontend/src/util/: api.ts  attachments.ts  config.ts  fileReader.ts  helpers.ts
(+9 files in other folders)
