[package]
name = "backend"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"
authors = ["Jens Pitkanen <jens.pitkanen@helsinki.fi>"]

[dependencies]
axum = "0.7.5"
sqlx = { version = "0.7.4", default-features = false, features = ["runtime-tokio", "any", "sqlite", "postgres", "mysql", "macros", "migrate"] }
tokio = { version = "1.38.1", features = ["rt-multi-thread", "net", "macros", "signal"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
