[package]
name = "backend"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"
authors = ["Jens Pitkanen <jens.pitkanen@helsinki.fi>"]

[dependencies]
anyhow = "1.0.86"
axum = "0.7.5"
sqlx = { version = "0.7.4", default-features = false, features = ["runtime-tokio", "tls-rustls", "any", "sqlite", "postgres", "mysql", "macros", "migrate"] }
tokio = { version = "1.38.1", features = ["rt-multi-thread", "net", "macros", "signal"] }
tower-http = { version = "0.5.2", features = ["trace", "compression-deflate", "compression-gzip", "decompression-deflate", "decompression-gzip"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

[profile.dev.package.sqlx-macros]
opt-level = 3
