[package]
name = "backend"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"
authors = ["Jens Pitkanen <jens.pitkanen@helsinki.fi>"]

[dependencies]
anyhow = "1.0.86"
arrayvec = { version = "0.7.4", features = ["serde"] }
axum = "0.7.5"
data-encoding = "2.6.0"
http-body = "1.0.1"
http-body-util = "0.1.2"
ring = "0.17.8"
serde = "1.0.204"
sqlx = { version = "0.8.0", default-features = false, features = ["runtime-tokio", "tls-rustls", "any", "sqlite", "postgres", "mysql", "macros", "migrate"] }
tokio = { version = "1.38.1", features = ["rt-multi-thread", "net", "macros", "signal"] }
tokio-stream = "0.1.15"
tower-http = { version = "0.5.2", features = ["trace", "compression-deflate", "compression-gzip", "decompression-deflate", "decompression-gzip"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
uuid = { version = "1.10.0", features = ["v4"] }

[profile.dev.package.sqlx-macros]
opt-level = 3
